added chart to js file

--- a/index.html
+++ b/index.html
@@ -20,9 +20,15 @@
 
  </section>
 
- <button id="show-results-btn"> Show Results</button>
- <ul id="display-results-list"></ul>
+ <!-- <button id="show-results-btn"> Show Results</button>
+ <ul id="display-results-list"></ul> -->
+
+ <section>
+   <canvas id="my-chart"></canvas>
+
+ </section>
   </main>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.1/dist/chart.min.js"></script>
   <script src="app.js"></script>
 </body>
 </html>
